 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES

PIG-5282: Upgade to Java 8 (satishsaley via rohini)
 
IMPROVEMENTS

PIG-5288: Improve performance of PigTextRawBytesComparator (rohini)

PIG-5287: bump jython to 2.7.1 (dbist13 via rohini)

PIG-5264: Remove deprecated keys from PigConfiguration (nkollar via rohini)

PIG-5157: Upgrade to Spark 2.0 (nkollar via liyunzhang)

PIG-5237: Fix DOT file parsing to enable DOT-based physical plan testing (YaShock via szita)

PIG-5269: MapReduceLauncher and MRJobStats imports org.python.google.common.collect.Lists instead of org.google.common.collect.Lists (nkollar via szita)

PIG-4700: Enable progress reporting for Tasks in Tez (satishsaley via rohini)

PIG-5251: Bump joda-time to 2.9.9 (dbist13 via rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5294: Spark unit tests are always run in spark1 mode (szita)

PIG-5277: Spark mode is writing nulls among tuples to the output (workaround) (szita)

PIG-5283: Configuration is not passed to SparkPigSplits on the backend (szita)

PIG-5284: Fix flakyness introduced by PIG-3655 (szita)

PIG-5278: Unit test failures because of PIG-5264 (nkollar via rohini)

PIG-5276: building "jar" should not call "clean" (nkollar via szita)

PIG-5246: Modify bin/pig about SPARK_HOME, SPARK_ASSEMBLY_JAR after upgrading spark to 2 (liyunzhang)

PIG-3655: BinStorage and InterStorage approach to record markers is broken (szita)

PIG-5274: TestEvalPipelineLocal#testSetLocationCalledInFE is failing in spark mode after PIG-5157 (nkollar via szita)

PIG-4767: Partition filter not pushed down when filter clause references variable from another load path (knoguchi)

PIG-5270: Typo in Pig Logging (FromAlaska49 via daijy)
